k8s/deploy-dev.yml
##################################################################################################
#  Nginx Service
##################################################################################################
apiVersion: v1
kind: Service
metadata:
  name: nginx-dev
spec:
  selector:
    app: nginx
  ports:
    - name: http
      port: 80
      protocol: TCP
      nodePort: 30000
  type: NodePort
---
##################################################################################################
#  Nginx Deployment
##################################################################################################
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment-dev
spec:
  selector:
    matchLabels:
      app: nginx
  replicas: 2
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
        - name: nginx
          image: ghcr.io/sos-hub-vn/sos-website:dev-latest
          ports:
            - containerPort: 80
      imagePullSecrets:
        - name: gitcred
---
##################################################################################################
#  Nginx ingress
##################################################################################################
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress-dev
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nginx
                port:
                  number: 80
