k8s/deploy-eks-prod.yml
##################################################################################################
#  Nginx Service
##################################################################################################
apiVersion: v1
kind: Service
metadata:
  name: nginx-prod
spec:
  selector:
    app: nginx
  ports:
    - name: http
      port: 80
      protocol: TCP
      #nodePort: 30000
  type: NodePort
---
##################################################################################################
#  Nginx Deployment
##################################################################################################
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment-prod
spec:
  selector:
    matchLabels:
      app: nginx
  replicas: 3
  template:
    metadata:
      labels:
        app: nginx
    spec:
      volumes:
        - name: nginx-config-volume
          configMap:
            name: nginx-config
      containers:
        - name: nginx
          image: ghcr.io/sos-hub-vn/sos-website:<<version>>
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
          volumeMounts:
            - name: nginx-config-volume
              mountPath: /etc/nginx/nginx.conf
              subPath: nginx.conf
              readOnly: true
      imagePullSecrets:
        - name: gitcred
---
##################################################################################################
#  Nginx ingress
##################################################################################################
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress-prod
  annotations:
    kubernetes.io/ingress.class: alb
    nginx.ingress.kubernetes.io/rewrite-target: /
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-southeast-1:864185773574:certificate/9d6baee7-f865-4ae5-b0e4-b74374d775c6
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS":443}]'
    alb.ingress.kubernetes.io/actions.ssl-redirect: '{"Type": "redirect", "RedirectConfig": { "Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301"}}'
    alb.ingress.kubernetes.io/scheme: "internet-facing"
spec:
  rules:
    - http:
        paths:
         - path: /
           pathType: Prefix
           backend:
             service:
               name: ssl-redirect
               port: 
                 name: use-annotation
         - path: /
           pathType: Prefix
           backend:
             service: 
               name: nginx-prod
               port: 
                 number: 80
